add personalization service and controller

--- a/synopsi-api/src/main/resources/application.properties
+++ b/synopsi-api/src/main/resources/application.properties
@@ -6,3 +6,30 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Personalization Service Configuration
+
+# Scoring weights (must sum to 1.0)
+synopsi.personalization.weights.topic-preference=0.40
+synopsi.personalization.weights.reading-history=0.30
+synopsi.personalization.weights.positive-feedback=0.20
+synopsi.personalization.weights.recency=0.10
+
+# Thresholds
+synopsi.personalization.thresholds.min-completion-for-engaged=70
+synopsi.personalization.thresholds.min-read-time-for-engaged=60
+synopsi.personalization.thresholds.high-interest-threshold=3
+synopsi.personalization.thresholds.min-relevance-score=0.3
+
+# Time decay parameters
+synopsi.personalization.time-decay.decay-days=30
+synopsi.personalization.time-decay.decay-rate=0.95
+
+# Cache settings
+synopsi.personalization.cache.ttl-minutes=10
+synopsi.personalization.cache.max-cache-size=1000
+
+# Spring Cache Configuration (if using Caffeine)
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
+spring.cache.cache-names=personalizedFeed
