user service, controller, data classes

--- a/synopsi-api/src/main/resources/application.properties
+++ b/synopsi-api/src/main/resources/application.properties
@@ -33,3 +33,7 @@ synopsi.personalization.cache.max-cache-size=1000
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
 spring.cache.cache-names=personalizedFeed
+
+# Disable Spring Security auto-configuration (we're only using BCrypt)
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#
