switch spring version so api docs work

--- a/synopsi-api/src/main/resources/application.properties
+++ b/synopsi-api/src/main/resources/application.properties
@@ -36,4 +36,15 @@ spring.cache.cache-names=personalizedFeed
 
 # Disable Spring Security auto-configuration (we're only using BCrypt)
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-#
+
+# OpenAPI Documentation
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.packages-to-scan=com.study.synopsi.controller
+
+# Sort endpoints alphabetically
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=alpha
+
+# Don't show Spring actuator endpoints
+springdoc.show-actuator=false
