auth system and tests. update existing tests

--- a/synopsi-api/src/main/resources/application.properties
+++ b/synopsi-api/src/main/resources/application.properties
@@ -34,9 +34,6 @@ spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
 spring.cache.cache-names=personalizedFeed
 
-# Disable Spring Security auto-configuration (we're only using BCrypt)
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
 # OpenAPI Documentation
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -48,3 +45,8 @@ springdoc.swagger-ui.operations-sorter=alpha
 
 # Don't show Spring actuator endpoints
 springdoc.show-actuator=false
+
+# JWT Configuration
+synopsi.jwt.secret=your-secret-key-change-this-in-production-must-be-at-least-256-bits-long
+synopsi.jwt.expiration=86400000
+# 86400000 ms = 24 hours
