fix circular dep. add UI skeleton

--- a/synopsi-api/src/main/resources/application.properties
+++ b/synopsi-api/src/main/resources/application.properties
@@ -50,3 +50,6 @@ springdoc.show-actuator=false
 synopsi.jwt.secret=your-secret-key-change-this-in-production-must-be-at-least-256-bits-long
 synopsi.jwt.expiration=86400000
 # 86400000 ms = 24 hours
+
+# Devtools settings
+spring.devtools.restart.enabled=true
