fix cache config. feed ingestion works

--- a/synopsi-api/src/main/resources/application.properties
+++ b/synopsi-api/src/main/resources/application.properties
@@ -32,7 +32,7 @@ synopsi.personalization.cache.max-cache-size=1000
 # Spring Cache Configuration (if using Caffeine)
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
-spring.cache.cache-names=personalizedFeed
+spring.cache.cache-names=personalizedFeed,feeds,sources,articles
 
 # OpenAPI Documentation
 springdoc.api-docs.path=/v3/api-docs
